    * fix: crashing issue when the 'queries.ps.rate' config value was undefined and the stats graph was displayed
    * fix: making the interface more resilient to being resized while popups are visible
    * fix: log panel wasn't respecting the prepopulate* log level config options
    * fix: off by one error when wrapping lines in the log panel

10/6/10 - version 1.3.7 (r23439)
Numerous improvements, most notably being an expanded log panel, installer, and deb/rpm builds.

    * added: installation/removal scripts and man page (thanks to kaner)
    * added: scripts and resources for making deb and rpm releases (thanks to ioerror, and also requested by helmut)
    * added: path prefix option for chroot jails (requested by asn)
    * added: customizable graph size (requested by voidzero)
    * added: incremental y-axis measurements to the graph (requested by voidzero)
    * added: caching for static GETINFO parameter
    * added: logging for the refresh rate metric
    * change: full rewrite of the log panel, providing:
          o dividers for the date, bordering all events that occurred on the same day
          o hiding duplicate log entries (feature request by asn)
          o coalescing updates if they're numerous, such as running at the DEBUG runlevel
          o providing a notice if tor supports event types that arm doesn't, and logging them as the 'UNKNOWN' type
          o condensing the label for runlevel event ranges further if they're identical for multiple types
          o options for:
                + saving logged events to a file, either via snapshots or running persistence
                + presenting torctl events of arbitrary runlevels
                + clearing the event log
                + maximum lines displayed from individual log entries
                + cropping based on time (requested by voidzero)
          o numerous performance improvements (for log prepopulation, determining the content length, caching for helper functions, etc)